--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,15 @@
                 </div>
             </div>
             <div class="content">
-                <div class="tet">
+                <div class="tracker-body" role="tracker_body">
                     <span>Введите номер посылки:</span>
-                    <div class="input_group">
-                        <input placeholder="Номер посылки" />
+                    <div class="input_group" role="input_body">
+                        <input placeholder="Номер посылки" value="MTS133937058" />
                         <button>Отследить</button>
                     </div>
                     <span>Чтобы отследить движение вашего заказа, введите номер вашей посылки.</span>
-                    <span>Номер вашей посылки указан в письме, которое мы отправляем вам в день отправки заказа.</span>
+                    <span style="margin-bottom: 25px; ">Номер вашей посылки указан в письме, которое мы отправляем вам в день отправки заказа.</span>
+                    <div role="resultContainer" class="resultContainer"></div>
                 </div>  
             </div>
             <footer>
