remove test data

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <div class="tracker-body" role="tracker_body">
                     <span>Введите номер посылки:</span>
                     <div class="input_group" role="input_body">
-                        <input placeholder="Номер посылки" value="MTS133937058" />
+                        <input placeholder="Номер посылки" />
                         <button>Отследить</button>
                     </div>
                     <span>Чтобы отследить движение вашего заказа, введите номер вашей посылки.</span>
