--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
                 </div>
             </div>
             <div class="content">
-                <div class="tracker-body" role="tracker_body">
+
+                <div class="home" block="home" >
+                    Главный блок
+                </div>
+
+                <div class="tracker-body" role="tracker_body" block="tracker">
                     <span>Введите номер посылки:</span>
                     <div class="input_group" role="input_body">
                         <input placeholder="Номер посылки" />
@@ -28,9 +33,9 @@
                 <div class="content">
                 <div class="line">
                     <div class="links">
-                        <a href="#">Где мой заказ?</a>
-                        <a href="#">Возврат</a>
-                        <a href="#">Контакты</a>
+                        <a href="#" link>Где мой заказ?</a>
+                        <a href="/#tracker" link>Возврат</a>
+                        <a href="#" link>Контакты</a>
                     </div>
                     <div class="info">
                         <a href="tel:+780080808080">88008008080</a>
