--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,151 @@
                     Главный блок
                 </div>
 
+                <div class="returns" block="returns">
+                    <div class="info">
+                        <span>Товар, заказанный в myToys и не подошедший по каким-либо причинам, может быть возвращен в течение <strong>7 дней</strong> после его получения.</span>
+                        <span><strong>Для отмены</strong> предоплаченного заказа до его получения или в момент получения (у курьера или в пункте выдачи), вам необходимо <strong>обратиться в наш коллцентр ( <a href="tel:+78007752423">8 (800) 775-24-23</a>, <a href="tel:+74997752423">8 (499) 775-24-23</a> )</strong></span>
+                        <span>Возврат денежных средств покупателю осуществляется двумя способами:</span>
+                        <ul>
+                            <li>банковским переводом</li>
+                            <li>почтовым переводом</li>
+                        </ul>
+                        <span class="red">Выдача денежных средств на месте сдачи возврата не производится.</span>
+                        <span>Срок возврата денежных средств составляет <strong>до 10 рабочих дней</strong> с момента получения возврата товара. Если заказ был оплачен банковской картой на сайте, деньги возвращаются на карту, с которой был произведен платеж.</span>
+                        <span>Обратите внимание, что деньги за возвращенный товар будут отправлены лицу, оформившему заказ на сайте, если Покупатель не может самостоятельно получить денежные средства, за него это может сделать доверенное лицо.</span>
+                        <span>Обратная доставка товаров до нашего склада осуществляется <strong>за счет покупателя.</strong></span>
+                        <span>Если ваш заказ был доставлен в пункт выдачи Boxberry, вы сможете вернуть полный заказ в этом же пункте выдачи, без оплаты обратной доставки.</span>
+                        <span>Возврат товара <strong>надлежащего качества</strong> возможен, если:</span>
+                        <ul>
+                            <li>товар не был в употреблении</li>
+                            <li>сохранены его товарный вид, потребительские свойства, пломбы, фабричные ярлыки</li>
+                            <li>имеется товарный/кассовый чек либо иной документ, подтверждающий оплату указанного товара</li>
+                        </ul>
+                        <span>В случае возврата товара <strong>ненадлежащего качества</strong> или перепутанного артикула мы возместим вам стоимость товара и расходы на обратную доставку товара.</span>
+                    </div>
+                    <div class="dpd">
+                        <span class="block-header">Выберите удобный для Вас способ возврата:</span>
+                        <div class="sub-header">
+                            <div class="sub-logo dpd"></div>
+                            <span>Возврат с курьером DPD</span>
+                        </div>
+
+                        <div class="info-block dpd">
+                            <div class="info-line">
+                                <div>
+                                    <div class="im im1"></div>
+                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                </div>
+                                <div>
+                                    <div class="im im2"></div>
+                                    <span>В коробку с возвращаемым товаром вложите:<br />1) Заявление о возврате<br />2) Копию чека о покупке</span>
+                                </div>
+                                <div>
+                                    <div class="im im3"></div>
+                                    <span>Введите номер заказа или номер посылки DPD в поле ниже, заполните бланк на сайте DPD. Передайте Вашу посылку курьеру или в пункт приема посылок DPD.</span>
+                                </div>
+                            </div>
+                            <form class="input_group" action="/" role="dpd_input_form">
+                                <input required placeholder="Номер заказа">
+                                <input type="submit" value="Оформить возврат" />
+                            </form>
+                            <span>Стоимость возврата курьером “от вашей двери” 305 рублей</span>
+                            <ul>
+                                <li>Таким способом можно вернуть только посылки, не превышающие весом 15 кг.</li>
+                                <li>Услуга недоступна в Норильске, Магаданской и Сахалинской областях, Камчатском крае и Якутии.</li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+
+                    <div class="boxberry">
+                        <div class="sub-header">
+                            <div class="sub-logo boxberry"></div>
+                            <span>Возврат в пункт выдачи Boxberry<br />Услуга доступна не во всех пунктах Boxberry</span>
+                        </div>
+                        <div class="info-block boxberry">
+                            <div class="info-line">
+                                <div>
+                                    <div class="im im1"></div>
+                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                </div>
+                                <div>
+                                    <div class="im im2"></div>
+                                    <span>В коробку с возвращаемым товаром вложите:<br />1) Заявление о возврате<br />2) Копию чека о покупке</span>
+                                </div>
+                                <div>
+                                    <div class="im im3"></div>
+                                    <span>Отправьте товар нам через пункты выдачи заказов Boxberry.</span>
+                                </div>
+                            </div>
+                            <span><strong>Бесплатно</strong> для заказов, доставленных в пункты выдачи Boxberry</span>
+                            <ul>
+                                <li>Оформить возврат можно только всего заказа полученного через BoxBerry.</li>
+                                <li>Возврат возможен только в отделении где была получена посылка.</li>
+                                <li>Таким способом можно вернуть только посылки, не превышающие размер 120х80х50 см.</li>
+                                <li>Товары необходимо упаковать в надежную упаковку.</li>
+                            </ul>
+                            <span>Доступные точки в вашем городе, уточняйте по телефону <a href="tel:+780022228000">8 (800) 222-80-00</a></span>
+                        </div>
+                    </div>
+
+                    <div class="pickpoint">
+                        <div class="sub-header">
+                            <div class="sub-logo pickpoint"></div>
+                            <span>Возврат в постамат PickPoint</span>
+                        </div>
+                        <div class="info-block pickpoint">
+                            <div class="info-line">
+                                <div>
+                                    <div class="im im1"></div>
+                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                </div>
+                                <div>
+                                    <div class="im im2"></div>
+                                    <span>В коробку с возвращаемым товаром вложите:<br />1) Заявление о возврате<br />2) Копию чека о покупке</span>
+                                </div>
+                                <div>
+                                    <div class="im im3"></div>
+                                    <span>Отправьте товар через постамат PickPoint.</span>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>Таким способом можно вернуть только посылки, <strong>не превышающие размер 36х36х60 см.</strong></li>
+                                <li>Товары необходимо упаковать в надежную упаковку.</li>
+                                <li>Услуга недоступна в г. Калининград.</li>
+                            </ul>
+                            <span style="text-align: center;"><a class="sp_link" href="https://pickpoint.ru/returning/#map" target="_blank">Инструкция и точки приема возвратов</span>
+                        </div>
+                    </div>
+
+                    <div class="pochta">
+                        <div class="sub-header">
+                            <div class="sub-logo pochta"></div>
+                            <span>Возврат через Почту России</span>
+                        </div>
+                        <div class="info-block pochta">
+                            <div class="info-line">
+                                <div>
+                                    <div class="im im1"></div>
+                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                </div>
+                                <div>
+                                    <div class="im im2"></div>
+                                    <span>В коробку с возвращаемым товаром вложите:<br />1) Заявление о возврате<br />2) Копию чека о покупке</span>
+                                </div>
+                                <div>
+                                    <div class="im im3"></div>
+                                    <span>Отправьте товар через Почту России по адресу:ООО «МТ клик», а/я № 22, Московский АСЦ, 140961, г. Москва</span>
+                                </div>
+                            </div>
+                            <span>Отправка возвращаемого товара наложенным платежом не допускается.</span>
+                            <span style="text-align: center;"><a class="sp_link" href="https://www.pochta.ru/offices" target="_blank">Поиск отделений Почты России</span>
+                        </div>
+                    </div>
+
+                </div>
+
                 <div class="tracker-body" role="tracker_body" block="tracker">
                     <span>Введите номер посылки:</span>
                     <div class="input_group" role="input_body">
@@ -27,18 +172,52 @@
                     <span>Чтобы отследить движение вашего заказа, введите номер вашей посылки.</span>
                     <span style="margin-bottom: 25px; ">Номер вашей посылки указан в письме, которое мы отправляем вам в день отправки заказа.</span>
                     <div role="resultContainer" class="resultContainer"></div>
-                </div>  
+                </div>
+
+                <div class="contacts" role="contacts" block="contacts">
+                    <span class="block-header">Наша служба поддержки:</span>
+                    <div class="info">
+                        <span class="sub-header">Часы работы контактного центра:</span>
+                        <span>08:00 - 22:00 по московскому времени</span>
+                        <span class="sub-header">Телефон:</span>
+                        <span><a href="tel:+78007752423">8 (800) 775-24-23</a></span>
+                        <span><a href="tel:+74997752423">8 (499) 775-24-23</a></span>
+                        <span class="sub-header">E-Mail:</span>
+                        <span><a href="mailto:service@myToys.ru">service@myToys.ru</a></span>
+                    </div>
+                    <span class="block-header">Почтовый адрес для отправки возвратов:</span>
+                    <div class="info2">
+                        <span>ООО «МТ клик» 140961 г. Москва, а/я № 22, Московский АСЦ</span>
+                        <span>ОГРН: 1107746846426</span>
+                        <span>ИНН: 7704767133</span>
+                    </div>
+                    <span class="block-header">Почтовый адрес:</span>
+                    <div class="info2">
+                        <span>ООО «МТ клик» 115114 г. Москва, 1-ый Кожевнический пер., д. 8</span>
+                    </div>
+                    <span class="block-header">Юридический адрес:</span>
+                    <div class="info2">
+                        <span>ООО «МТ клик» 115114 г. Москва, 1-ый Кожевнический пер., д. 8</span>
+                        <span>ОГРН: 1107746846426</span>
+                        <span>ИНН: 7704767133</span>
+                    </div>
+                </div>
+                
+                
             </div>
+
+
             <footer>
                 <div class="content">
                 <div class="line">
                     <div class="links">
-                        <a href="#" link>Где мой заказ?</a>
-                        <a href="/#tracker" link>Возврат</a>
-                        <a href="#" link>Контакты</a>
+                        <a href="/#tracker" link>Где мой заказ?</a>
+                        <a href="/#returns" link>Возврат</a>
+                        <a href="/#contacts" link>Контакты</a>
                     </div>
                     <div class="info">
-                        <a href="tel:+780080808080">88008008080</a>
+                        <a href="tel:+78007752423">8 (800) 775-24-23</a>
+                        <a href="tel:+74997752423">8 (499) 775-24-23</a>
                     </div>
                 </div>
                 <div class="address">
