--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,66 @@
             <div class="content">
 
                 <div class="home" block="home" >
-                    Главный блок
+                    <div class="homve-wrapper">
+                        <div class="home-f">
+                            <span class="text-h2">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
+                            <div class="text-h1">
+                                <span class="text1">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
+                                <span class="about">Немного фактов о нас:</span>
+                                <ul>
+                                    <li>За <strong>10</strong> лет работы мы выполнили более <strong>4 миллионов</strong> заказов и доставили более <strong>12 миллионов</strong> товаров.</li>
+                                    <li>За все время работы <strong>myToys.ru</strong> посетили более <strong>117 миллионов</strong> пользователей.</li>
+                                    <li>Были представлены товары более <strong>2500</strong> брендов.</li>
+                                    <li>Создали собственный бренд детской одежды <strong>BJORKA</strong></li>
+                                </ul>
+                            </div>
+                            <div class="image1"></div>
+                            <div class="image2"></div>
+                        </div>
+                        <div class="home-mf">
+                            <div class="text-h3">
+                                <span class="text1">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
+                                <span class="about">Немного фактов о нас:</span>
+                                <ul>
+                                    <li>За <strong>10</strong> лет работы мы выполнили более <strong>4 миллионов</strong> заказов и доставили более <strong>12 миллионов</strong> товаров.</li>
+                                    <li>За все время работы <strong>myToys.ru</strong> посетили более <strong>117 миллионов</strong> пользователей.</li>
+                                    <li>Были представлены товары более <strong>2500</strong> брендов.</li>
+                                    <li>Создали собственный бренд детской одежды <strong>BJORKA</strong></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="home-ds">
+                            <span>Служба поддержки клиентов продолжает работать в обычном режиме и все заказы, поступившие к нам до 31 мая 2021 года, будут обработаны и доставлены.<br />Телефон поддержки 8 (499) 775-24-23</span>
+                        </div>
+                        <div class="home-ms"></div>
+                        <div class="home-mline0">Предлагаем вам ознакомиться с ассортиментом немецкого бренда, который тоже является частью ОТТО-групп</div>
+                        <div class="home-mline1">
+                            <div class="hm-image1"></div>
+                            <div class="center-content">
+                                <span>Предлагаем вам ознакомиться с ассортиментом немецкого бренда, который тоже является частью ОТТО-групп</span>
+                                <div class="logo2"></div> 
+                            </div>
+                            <div class="hm-image2"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="home2" block="home2" >
+                    <div class="home-wrapper">
+                        <div class="image2"><span>Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span></div>
+                        <div class="text-content">
+                            <span class="text1">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
+                            <span class="about">Немного фактов о нас:</span>
+                            <ul>
+                                <li>За <strong>10</strong> лет работы мы выполнили более <strong>4 миллионов</strong> заказов и доставили более <strong>12 миллионов</strong> товаров.</li>
+                                <li>За все время работы <strong>myToys.ru</strong> посетили более <strong>117 миллионов</strong> пользователей.</li>
+                                <li>Были представлены товары более <strong>2500</strong> брендов.</li>
+                                <li>Создали собственный бренд детской одежды <strong>BJORKA</strong></li>
+                            </ul>
+                        </div>
+                        <div class="image1"></div>
+                        <div class="image3"></div>
+                    </div>
                 </div>
 
                 <div class="returns" block="returns">
@@ -51,7 +110,7 @@
                             <div class="info-line">
                                 <div>
                                     <div class="im im1"></div>
-                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                    <span>Заполните и распечатайте <a href="/assets/return.doc">Заявление о возврате</a></span>
                                 </div>
                                 <div>
                                     <div class="im im2"></div>
@@ -85,7 +144,7 @@
                             <div class="info-line">
                                 <div>
                                     <div class="im im1"></div>
-                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                    <span>Заполните и распечатайте <a href="/assets/return.doc">Заявление о возврате</a></span>
                                 </div>
                                 <div>
                                     <div class="im im2"></div>
@@ -116,7 +175,7 @@
                             <div class="info-line">
                                 <div>
                                     <div class="im im1"></div>
-                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                    <span>Заполните и распечатайте <a href="/assets/return.doc">Заявление о возврате</a></span>
                                 </div>
                                 <div>
                                     <div class="im im2"></div>
@@ -145,7 +204,7 @@
                             <div class="info-line">
                                 <div>
                                     <div class="im im1"></div>
-                                    <span>Заполните и распечатайте <a href="/assets/">Заявление о возврате</a></span>
+                                    <span>Заполните и распечатайте <a href="/assets/return.doc">Заявление о возврате</a></span>
                                 </div>
                                 <div>
                                     <div class="im im2"></div>
@@ -165,10 +224,10 @@
 
                 <div class="tracker-body" role="tracker_body" block="tracker">
                     <span>Введите номер посылки:</span>
-                    <div class="input_group" role="input_body">
-                        <input placeholder="Номер посылки" />
-                        <button>Отследить</button>
-                    </div>
+                    <form class="input_group" role="input_body">
+                        <input required placeholder="Номер посылки" />
+                        <input type="submit" value="Отследить" />
+                    </form>
                     <span>Чтобы отследить движение вашего заказа, введите номер вашей посылки.</span>
                     <span style="margin-bottom: 25px; ">Номер вашей посылки указан в письме, которое мы отправляем вам в день отправки заказа.</span>
                     <div role="resultContainer" class="resultContainer"></div>
