--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <div class="content">
 
                 <div class="home" block="home" >
-                    <div class="homve-wrapper">
+                    <div class="home-wrapper">
                         <div class="home-f">
                             <span class="text-h2">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
                             <div class="text-h1">
@@ -56,24 +56,31 @@
                             </div>
                             <div class="hm-image2"></div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="home2" block="home2" >
-                    <div class="home-wrapper">
-                        <div class="image2"><span>Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span></div>
-                        <div class="text-content">
-                            <span class="text1">Нам жаль прощаться, но <strong>myToys</strong> уходит из <strong>России.</strong></span>
-                            <span class="about">Немного фактов о нас:</span>
-                            <ul>
-                                <li>За <strong>10</strong> лет работы мы выполнили более <strong>4 миллионов</strong> заказов и доставили более <strong>12 миллионов</strong> товаров.</li>
-                                <li>За все время работы <strong>myToys.ru</strong> посетили более <strong>117 миллионов</strong> пользователей.</li>
-                                <li>Были представлены товары более <strong>2500</strong> брендов.</li>
-                                <li>Создали собственный бренд детской одежды <strong>BJORKA</strong></li>
-                            </ul>
+                        <div class="hblock1">
+                            <div class="inner">Интернет-магазин <strong>bonprix.ru</strong> - это онлайн-шоппинг 24/7, яркий и качественный ассортимент одежды, обуви, аксессуаров и товаров для дома из Германии для любого повода по приемлемым ценам, широкий размерный ряд, доставка по всей России, индивидуальный подход к обслуживанию.</div>
                         </div>
-                        <div class="image1"></div>
-                        <div class="image3"></div>
+
+                        <div class="hblock2">
+                            <div class="promo">
+                                <div class="promo-left">
+                                    <span class="pl1">Бесплатная доставка</span>
+                                    <span class="pl2">по промокоду</span>
+                                    <span class="pl3">98191</span>
+                                </div>
+                                <div class="promo-logo"></div>
+                            </div>
+                            <div class="inner">
+                                Для первого знакомства с брендом воспользуйтесь приятным бонусом — оформите первый заказ с бесплатной доставкой! Укажите промокод 98191 при оформлении заказа и получите бесплатную доставку (для заказа на сумму от 1 495 рублей)
+                            </div>
+                        </div>
+
+                        <div class="hblock3">
+                            <div class="inner">
+                                <span><strong>myToys прощается с вами!</strong></span>
+                                <span style="margin-bottom: 15px;">Желаем вам и вашим семьям самого лучшего в жизни: достигать больших высот и добиваться поставленных целей, жить в постоянном празднике добра, улыбок и искренней детской радости.</span>
+                                <span><strong>C любовью, команда myToys</strong></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
