--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>mytoys</title>
+        <title>Интернет-магазин myToys.ru прощается с вами!</title>
+        <link rel="shortcut icon" href="/assets/mt_fav.svg" type="image/svg+xml">
     </head>
     <body>
         
