--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,7 +2,7 @@
     <div class="content">
     <div class="line">
         <div class="links">
-            <a href="/#tracker" link>Где мой заказ?</a>
+            <!-- <a href="/#tracker" link>Где мой заказ?</a> -->
             <a href="/#returns" link>Возврат</a>
             <a href="/#contacts" link>Контакты</a>
             <a href="/#privacypolicy" link>Политика обработки персональных данных</a>
