--- a/src/html/home.html
+++ b/src/html/home.html
@@ -33,12 +33,12 @@
         <div class="home-ms">.</div>
         <div class="home-mline0">Предлагаем вам ознакомиться с ассортиментом немецкого бренда, который тоже является частью ОТТО-групп</div>
         <div class="home-mline1">
-            <div class="hm-image1">.</div>
+            <div class="hm-image1"><a href="https://www.bonprix.ru/" target="_blank" class="bonprix">link</a></div>
             <div class="center-content">
                 <span>Предлагаем вам ознакомиться с ассортиментом немецкого бренда, который тоже является частью ОТТО-групп</span>
-                <div class="logo2">.</div> 
+                <div class="logo2"><a href="https://www.bonprix.ru/" target="_blank" class="bonprix">link</a></div> 
             </div>
-            <div class="hm-image2">.</div>
+            <div class="hm-image2"><a href="https://www.bonprix.ru/" target="_blank" class="bonprix">link</a></div>
         </div>
         <div class="hblock1">
             <div class="inner">Интернет-магазин <a href="https://www.bonprix.ru/" target="_blank">bonprix.ru</a> - это онлайн-шоппинг 24/7, яркий и качественный ассортимент одежды, обуви, аксессуаров и товаров для дома из Германии для любого повода по приемлемым ценам, широкий размерный ряд, доставка по всей России, индивидуальный подход к обслуживанию.</div>
